sendmail,perfstore script

--- a/etc/nagios.cfg
+++ b/etc/nagios.cfg
@@ -808,7 +808,7 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=0
+process_performance_data=1
 
 
 
@@ -820,8 +820,8 @@ process_performance_data=0
 # define in your host configuration file.  Read the HTML docs for
 # more information on performance data.
 
-#host_perfdata_command=process-host-perfdata
-#service_perfdata_command=process-service-perfdata
+host_perfdata_command=process-host-perfdata
+service_perfdata_command=process-service-perfdata
 
 
 
@@ -1092,7 +1092,7 @@ high_host_flap_threshold=20.0
 #   strict-iso8601  (YYYY-MM-DDTHH:MM:SS)
 #
 
-date_format=us
+date_format=iso8601
 
 
 
