--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -4,8 +4,8 @@ file=/tmp/supervisor.sock
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisord.log
-logfile_maxbytes=8MB
-logfile_backups=3
+logfile_maxbytes=4MB
+logfile_backups=8
 loglevel=info
 pidfile=/tmp/supervisord.pid
 
@@ -15,32 +15,12 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
 
-
-
 [program:manage]
 command=/usr/local/bin/toughrun manage
 redirect_stderr=true
-stdout_logfile=/var/toughradius/toughradius.log
+stdout_logfile=/var/toughnms/toughnms.log
 
-
-[program:auth]
-command=/usr/local/bin/toughrun auth
+[program:nagios]
+command=/usr/local/bin/toughrun nagios
 redirect_stderr=true
-stdout_logfile=/var/toughradius/toughradius.log
-
-[program:acct]
-command=/usr/local/bin/toughrun acct
-redirect_stderr=true
-stdout_logfile=/var/toughradius/toughradius.log
-
-[program:worker]
-command=/usr/local/bin/toughrun worker
-process_name = %(program_name)s%(process_num)d
-numprocs=4
-redirect_stderr=true
-stdout_logfile=/var/toughradius/toughradius.log
-
-[program:task]
-command=/usr/local/bin/toughrun task
-redirect_stderr=true
-stdout_logfile=/var/toughradius/toughradius.log
+stdout_logfile=/var/toughnms/nagios.log
