add more config; docker build done

--- a/etc/commands.cfg
+++ b/etc/commands.cfg
@@ -26,13 +26,13 @@
 # 'notify-host-by-email' command definition
 define command{
     command_name    notify-host-by-email
-    command_line    /usr/bin/printf "%b" "***** Nagios *****\n\nNotification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nDate/Time: $LONGDATETIME$\n" | xargs /usr/local/bin/sendmail  --topic "** $NOTIFICATIONTYPE$ Host Alert: $HOSTNAME$ is $HOSTSTATE$ **" --mailto $CONTACTEMAIL$ --ctx 
+    command_line    /usr/local/bin/sendmail --topic "** $NOTIFICATIONTYPE$ Host Alert: $HOSTNAME$ is $HOSTSTATE$ **" --mailto $CONTACTEMAIL$ --ctx "***** Nagios *****\n\nNotification Type: $NOTIFICATIONTYPE$\nHost: $HOSTNAME$\nState: $HOSTSTATE$\nAddress: $HOSTADDRESS$\nInfo: $HOSTOUTPUT$\n\nDate/Time: $LONGDATETIME$\n"
     }
 
 # 'notify-service-by-email' command definition
 define command{
     command_name    notify-service-by-email
-    command_line    /usr/bin/printf "%b" "***** Nagios *****\n\nNotification Type: $NOTIFICATIONTYPE$\n\nService: $SERVICEDESC$\nHost: $HOSTALIAS$\nAddress: $HOSTADDRESS$\nState: $SERVICESTATE$\n\nDate/Time: $LONGDATETIME$\n\nAdditional Info:\n\n$SERVICEOUTPUT$\n" | xargs /usr/local/bin/sendmail --topic "** $NOTIFICATIONTYPE$ Service Alert: $HOSTALIAS$/$SERVICEDESC$ is $SERVICESTATE$ **" --mailto $CONTACTEMAIL$ --ctx 
+    command_line    /usr/local/bin/sendmail --topic "** $NOTIFICATIONTYPE$ Service Alert: $HOSTALIAS$/$SERVICEDESC$ is $SERVICESTATE$ **" --mailto $CONTACTEMAIL$ --ctx  "***** Nagios *****\n\nNotification Type: $NOTIFICATIONTYPE$\n\nService: $SERVICEDESC$\nHost: $HOSTALIAS$\nAddress: $HOSTADDRESS$\nState: $SERVICESTATE$\n\nDate/Time: $LONGDATETIME$\n\nAdditional Info:\n\n$SERVICEOUTPUT$\n" 
     }
 
 
@@ -230,7 +230,7 @@ define command{
 # 'process-host-perfdata' command definition
 define command{
     command_name    process-host-perfdata
-    command_line    /usr/local/bin/perfstore -l $LASTHOSTCHECK$ -H $HOSTNAME$ -c $SERVICECHECKCOMMAND$ -d $HOSTPERFDATA$
+    command_line    /usr/local/bin/perfstore -l "$LASTHOSTCHECK$" -H "$HOSTNAME$" -c "$SERVICECHECKCOMMAND$" -d "$HOSTPERFDATA$"
     # command_line    /usr/bin/printf "%b" "$LASTHOSTCHECK$\t$HOSTNAME$\t$HOSTSTATE$\t$HOSTATTEMPT$\t$HOSTSTATETYPE$\t$HOSTEXECUTIONTIME$\t$HOSTOUTPUT$\t$HOSTPERFDATA$\n" >> /usr/local/var/lib/nagios/host-perfdata.out
     }
 
@@ -238,6 +238,6 @@ define command{
 # 'process-service-perfdata' command definition
 define command{
     command_name    process-service-perfdata
-    command_line    /usr/local/bin/perfstore -l $LASTSERVICECHECK$ -H $HOSTNAME$ -c $SERVICECHECKCOMMAND$ -d $SERVICEPERFDATA$ -s $SERVICEDESC$
+    command_line    /usr/local/bin/perfstore -l "$LASTSERVICECHECK$" -H "$HOSTNAME$" -c "$SERVICECHECKCOMMAND$" -d "$SERVICEPERFDATA$" -s "$SERVICEDESC$"
     # command_line    /usr/bin/printf "%b" "$LASTSERVICECHECK$\t$HOSTNAME$\t$SERVICEDESC$\t$SERVICESTATE$\t$SERVICEATTEMPT$\t$SERVICESTATETYPE$\t$SERVICEEXECUTIONTIME$\t$SERVICELATENCY$\t$SERVICEOUTPUT$\t$SERVICEPERFDATA$\n" >> /usr/local/var/lib/nagios/service-perfdata.out
     }
