--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -24,3 +24,8 @@ stdout_logfile=/var/toughnms/toughnms.log
 command=/usr/local/bin/toughrun nagios
 redirect_stderr=true
 stdout_logfile=/var/toughnms/nagios.log
+
+[program:mongodb]
+command=/usr/local/bin/toughrun mongodb
+redirect_stderr=true
+stdout_logfile=/var/toughnms/mongodb.log
