--- a/etc/supervisord_test.conf
+++ b/etc/supervisord_test.conf
@@ -3,7 +3,7 @@ file=/tmp/supervisor.sock
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
+logfile=/tmp/supervisord.log
 logfile_maxbytes=4MB
 logfile_backups=8
 loglevel=info
@@ -24,3 +24,8 @@ stdout_logfile=/var/toughnms/toughnms.log
 command=nagios /usr/local/nagios/etc/nagios.cfg
 redirect_stderr=true
 stdout_logfile=/var/toughnms/nagios.log
+
+[program:mongodb]
+command=mongod --dbpath /var/toughnms/data/mdb
+redirect_stderr=true
+stdout_logfile=/var/toughnms/mongodb.log
