--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -21,7 +21,7 @@ redirect_stderr=true
 stdout_logfile=/var/toughnms/toughnms.log
 
 [program:nagios]
-command=/usr/local/bin/toughrun nagios
+command=/usr/local/nagios/bin/nagios /usr/local/nagios/etc/nagios.cfg
 redirect_stderr=true
 stdout_logfile=/var/toughnms/nagios.log
 
