add host and ping service

--- a/etc/localhost.cfg
+++ b/etc/localhost.cfg
@@ -1,18 +1,18 @@
 # Define a host for the local machine
 define host{
         use                     linux-server            ; Name of host template to use
-							; This host definition will inherit all variables that are defined
-							; in (or inherited by) the linux-server host template definition.
-        host_name               localhost
-        alias                   localhost
+                                                        ; This host definition will inherit all variables that are defined
+                                                        ; in (or inherited by) the linux-server host template definition.
+        host_name               monitor-server
+        alias                   MonitorServer
         address                 127.0.0.1
+        hostgroups              +monitor-servers
         }
 
 # Define an optional hostgroup for Linux machines
 define hostgroup{
-        hostgroup_name  linux-servers ; The name of the hostgroup
-        alias           Linux Servers ; Long name of the group
-        members         localhost     ; Comma separated list of hosts that belong to this group
+        hostgroup_name  monitor-servers ; The name of the hostgroup
+        alias                         Monitor Group
         }
 
 
@@ -20,9 +20,9 @@ define hostgroup{
 # Define a service to "ping" the local machine
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             PING
-	check_command			check_ping!100.0,20%!500.0,60%
+        check_command                   check_ping!100.0,20%!500.0,60%
         }
 
 
@@ -31,9 +31,9 @@ define service{
 # < 10% free space on partition.
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             Root Partition
-	check_command			check_local_disk!20%!10%!/
+        check_command                   check_local_disk!20%!10%!/
         }
 
 
@@ -43,9 +43,9 @@ define service{
 # if > 50 users.
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             Current Users
-	check_command			check_local_users!20!50
+        check_command                   check_local_users!20!50
         }
 
 
@@ -54,30 +54,30 @@ define service{
 # > 400 users.
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             Total Processes
-	check_command			check_local_procs!250!400!RSZDT
+        check_command                   check_local_procs!250!400!RSZDT
         }
 
 
 
-# Define a service to check the load on the local machine. 
+# Define a service to check the load on the local machine.
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             Current Load
-	check_command			check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
+        check_command                   check_local_load!5.0,4.0,3.0!10.0,6.0,4.0
         }
 
 
 
-# Define a service to check the swap usage the local machine. 
+# Define a service to check the swap usage the local machine.
 # Critical if less than 10% of swap is free, warning if less than 20% is free
 define service{
-	use                           generic-service
-        host_name                       localhost
+        use                           generic-service
+        host_name                       monitor-server
         service_description             Swap Usage
-	check_command			check_local_swap!20!10
+        check_command                   check_local_swap!20!10
         }
 
 
@@ -86,10 +86,10 @@ define service{
 # Disable notifications for this service by default, as not all users may have SSH enabled.
 define service{
         use                             local-service         ; Name of service template to use
-        host_name                       localhost
+        host_name                       monitor-server
         service_description             SSH
-	check_command			check_ssh
-	notifications_enabled		0
+        check_command                   check_ssh
+        notifications_enabled           0
         }
 
 
@@ -100,7 +100,6 @@ define service{
 #         use                             local-service         ; Name of service template to use
 #         host_name                       localhost
 #         service_description             HTTP
-# 	check_command			check_http
-# 	notifications_enabled		0
+#       check_command                   check_http
+#       notifications_enabled           0
 #         }
-
